Comments Docs fix
